--- a/app/src/main/res/values/progress.xml
+++ b/app/src/main/res/values/progress.xml
@@ -21,5 +21,18 @@
         <attr name="arc_bottom_text_size" format="dimension"/>
     </declare-styleable>
 
+    <declare-styleable name="CircleProgress">
+        <attr name="circle_progress" format="integer"/>
+        <attr name="circle_max" format="integer"/>
+
+        <attr name="circle_unfinished_color" format="color"/>
+        <attr name="circle_finished_color" format="color"/>
+
+        <attr name="circle_text_size" format="dimension"/>
+        <attr name="circle_text_color" format="color"/>
+
+        <attr name="circle_prefix_text" format="string"/>
+        <attr name="circle_suffix_text" format="string"/>
+    </declare-styleable>
 
 </resources>
