--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -19,7 +19,6 @@
         android:layout_marginRight="1dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="1dp"
-        android:id="@+id/checkBox"
-        android:button="@null" />
+        android:id="@+id/checkBox" />
 
 </RelativeLayout>
