--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="bright_blue"> #56abe4 </color>
     <color name="purple">  #9d55b8 </color>
     <color name="color_272636">#272636</color>
+    <color name="color_3481f2">#3481f2</color>
 
 </resources>
