--- a/app/src/main/res/layout/activity_mouse.xml
+++ b/app/src/main/res/layout/activity_mouse.xml
@@ -10,8 +10,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_weight="1"
-        android:id="@+id/touchMod"/>
+        android:id="@+id/touchMod"
+        android:background="@drawable/touch_pad"/>
 
     <ImageView
         android:layout_width="match_parent"
