--- a/app/src/main/res/layout/filelist.xml
+++ b/app/src/main/res/layout/filelist.xml
@@ -27,16 +27,42 @@
         <!--custom:arc_bottom_text_size="16sp"-->
         <!--custom:arc_text_color="@color/color_e" />-->
 
-    <com.example.manager.Utils.CircleProgress
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_centerInParent="true"
-        android:id="@+id/progress"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:visibility="gone"
-        custom:circle_progress="0"
-        custom:circle_finished_color="@color/blue"
-        custom:circle_unfinished_color="@color/color_c"
-        custom:circle_text_size="16sp"/>
+        android:id="@+id/progress_background">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#66333333"/>
+
+        <com.example.manager.Utils.CircleProgress
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerInParent="true"
+            android:id="@+id/progress"
+            custom:circle_progress="0"
+            custom:circle_finished_color="@color/blue"
+            custom:circle_unfinished_color="@color/color_9"
+            custom:circle_text_size="16sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="100dp"
+            android:layout_alignBottom="@+id/progress"
+            android:layout_marginBottom="30dp"
+            android:layout_centerInParent="true"
+            android:id="@+id/fileCount"
+            android:gravity="center"
+            android:singleLine="true"
+            android:ellipsize="middle"
+            android:textSize="16sp"
+            android:textColor="@color/color_e"/>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
