--- a/app/src/main/res/values/progress.xml
+++ b/app/src/main/res/values/progress.xml
@@ -35,4 +35,10 @@
         <attr name="circle_suffix_text" format="string"/>
     </declare-styleable>
 
+    <declare-styleable name="Themes">
+        <attr name="circleProgressStyle" format="reference"/>
+        <attr name="donutProgressStyle" format="reference"/>
+        <attr name="arcProgressStyle" format="reference"/>
+    </declare-styleable>
+
 </resources>
