--- a/app/src/main/res/layout/folder_layout.xml
+++ b/app/src/main/res/layout/folder_layout.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:background="@color/color_e">
 
+    <include layout="@layout/actionbar"/>
+
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
