--- a/app/src/main/res/drawable/edit_text.xml
+++ b/app/src/main/res/drawable/edit_text.xml
@@ -4,10 +4,10 @@
     <item>
         <shape
             android:shape="rectangle">
-            <corners android:topLeftRadius="12.5dp"
-                android:topRightRadius="12.5dp"
-                android:bottomLeftRadius="12.5dp"
-                android:bottomRightRadius="12.5dp"/>
+            <corners android:topLeftRadius="15dp"
+                android:topRightRadius="15dp"
+                android:bottomLeftRadius="15dp"
+                android:bottomRightRadius="15dp"/>
             <solid android:color="@color/green"/>
         </shape>
     </item>
@@ -16,11 +16,11 @@
         android:bottom="1dp" android:top="1dp" android:left="1dp" android:right="1dp">
         <shape
             android:shape="rectangle">
-            <corners android:topLeftRadius="12.5dp"
-                android:topRightRadius="12.5dp"
-                android:bottomLeftRadius="12.5dp"
-                android:bottomRightRadius="12.5dp"/>
-            <solid android:color="@color/color_e"/>
+            <corners android:topLeftRadius="15dp"
+                android:topRightRadius="15dp"
+                android:bottomLeftRadius="15dp"
+                android:bottomRightRadius="15dp"/>
+            <solid android:color="@color/color_fafafa"/>
         </shape>
     </item>
 
