--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -60,7 +60,7 @@
         android:gravity="center"
         android:id="@+id/search"
         android:background="@drawable/actionbar_button"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="25dp"
@@ -79,10 +79,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="25dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="60dp"
+            android:layout_marginRight="49dp"
             android:background="@drawable/edit_text">
 
             <EditText
@@ -98,15 +98,14 @@
                 android:textColorHint="@color/color_6"
                 android:textColor="@color/color_3"
                 android:ellipsize="none"
-                android:singleLine="true"/>
+                android:singleLine="true" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="49dp"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:id="@+id/cancel"
