--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -1,95 +1,228 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_e"
-    android:orientation="vertical">
-
-    <include layout="@layout/actionbar"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/color_f">
-
-        <TextView
-            android:layout_width="65dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:id="@+id/login_text_count"
-            android:text="IP :"
-            android:textSize="16sp" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/login_text_count"
-            android:layout_marginRight="40dp"
-            android:id="@+id/count"
-            android:background="@null"
-            android:hint="请输入服务端IP"
-            android:textSize="15sp"
-            android:textStyle="italic"
-            android:textColorHint="#aaaaaa"/>
-
-        <ImageView
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
-            android:layout_centerVertical="true"
-            android:id="@+id/clear_Count"
-            android:background="@drawable/clear"/>
-
-    </RelativeLayout>
+    android:background="@color/color_e">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <com.example.manager.CheckBox.SmoothCheckBox
-            android:layout_width="26dp"
-            android:layout_height="31dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:id="@+id/SmoothCheckBox"/>
+        <include layout="@layout/actionbar"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:text="自动连接"
-            android:textSize="15sp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="40dp">
+
+            <LinearLayout
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:id="@+id/makeLink"
+                android:background="@drawable/make_link">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="我来创建"
+                    android:textSize="12sp"
+                    android:textStyle="italic"
+                    android:textColor="@color/color_f"/>
+
+            </LinearLayout>
+
+            <com.example.manager.Utils.CircleImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/superman"
+                android:src="@mipmap/superman"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/superman"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/qr_code"
+                android:background="@mipmap/superman"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/qr_code"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:id="@+id/connect_tips"
+                android:text="点击头像创建连接"
+                android:textSize="16sp"
+                android:textColor="@color/blue"/>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:id="@+id/joinLink"
+                android:background="@drawable/join_link">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="我要加入"
+                    android:textSize="12sp"
+                    android:textStyle="italic"
+                    android:textColor="@color/color_f"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp">
+
+                    <TextView
+                        android:layout_width="40dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:id="@+id/login_text_count"
+                        android:text="IP :"
+                        android:textSize="16sp"
+                        android:textColor="@color/color_272636"
+                        android:textStyle="italic"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_toRightOf="@+id/login_text_count"
+                        android:layout_marginRight="41dp"
+                        android:id="@+id/count"
+                        android:hint="请输入服务端IP"
+                        android:textSize="15sp"
+                        android:textStyle="italic"
+                        android:textColorHint="#aaaaaa"
+                        android:singleLine="true"
+                        android:ellipsize="middle"/>
+
+                    <!--<ImageView-->
+                        <!--android:layout_width="1dp"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_alignParentRight="true"-->
+                        <!--android:layout_marginRight="40dp"-->
+                        <!--android:background="@color/color_d"/>-->
+
+                    <LinearLayout
+                        android:layout_width="40dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:gravity="center"
+                        android:id="@+id/clear_Count">
+
+                        <ImageView
+                            android:layout_width="22dp"
+                            android:layout_height="22dp"
+                            android:background="@drawable/clear"/>
+
+                    </LinearLayout>
+
+                </RelativeLayout>
+
+                <!--<RelativeLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="40dp">-->
+
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:layout_alignParentRight="true"-->
+                        <!--android:layout_marginRight="10dp"-->
+                        <!--android:id="@+id/auto_connect"-->
+                        <!--android:text="自动连接"-->
+                        <!--android:textSize="15sp"/>-->
+
+                    <!--<com.example.manager.CheckBox.SmoothCheckBox-->
+                        <!--android:layout_width="26dp"-->
+                        <!--android:layout_height="31dp"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:layout_toLeftOf="@+id/auto_connect"-->
+                        <!--android:layout_marginRight="5dp"-->
+                        <!--android:id="@+id/SmoothCheckBox"/>-->
+
+                <!--</RelativeLayout>-->
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:id="@+id/auto_connect"
+                android:text="记住IP"
+                android:textSize="15sp"/>
+
+            <com.example.manager.CheckBox.SmoothCheckBox
+                android:layout_width="26dp"
+                android:layout_height="31dp"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/auto_connect"
+                android:layout_marginRight="5dp"
+                android:id="@+id/SmoothCheckBox"/>
+
+        </RelativeLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/connect"
+            android:background="@drawable/connect_device"
+            android:text="连接"
+            android:textSize="18sp"
+            android:textColor="#ffffff"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:id="@+id/scan"
+            android:background="@drawable/connect_device"
+            android:text="扫码连接"
+            android:textSize="18sp"
+            android:textColor="#ffffff"/>
 
     </LinearLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="15dp"
-        android:id="@+id/connect"
-        android:background="@drawable/connect_device"
-        android:text="连接"
-        android:textSize="18sp"
-        android:textColor="#ffffff"/>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="15dp"
-        android:id="@+id/scan"
-        android:background="@drawable/connect_device"
-        android:text="扫码连接"
-        android:textSize="18sp"
-        android:textColor="#ffffff"/>
-
-
-</LinearLayout>
+</ScrollView>
