--- a/app/src/main/res/layout/activity_mouse.xml
+++ b/app/src/main/res/layout/activity_mouse.xml
@@ -10,8 +10,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_weight="1"
@@ -26,7 +26,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/color_f">
 
         <LinearLayout
             android:layout_width="60dp"
@@ -42,7 +43,6 @@
                 android:background="@drawable/up"/>
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
